public class Cliente {
    private int id;
    private String nombre;
    private String direccion;
    private String DNI;
    private String correo;
    public void Cliente(int id, String nombre, String direccion, String DNI, String correo) {
        // TODO: Implementar el método
    }
    public int getId() {
        // TODO: Implementar el método
    }
    public String getNombre() {
        // TODO: Implementar el método
    }
    public String getDireccion() {
        // TODO: Implementar el método
    }
    public String getDNI() {
        // TODO: Implementar el método
    }
    public String getCorreo() {
        // TODO: Implementar el método
    }
    public void setId(int id) {
        // TODO: Implementar el método
    }
    public void setNombre(String nombre) {
        // TODO: Implementar el método
    }
    public void setDireccion(String direccion) {
        // TODO: Implementar el método
    }
    public void setDNI(String dNI) {
        // TODO: Implementar el método
    }
    public void setCorreo(String correo) {
        // TODO: Implementar el método
    }
}
