' Generated by UML Generator
' Encoded: dLN1Rjim3BtxAtIq5nleEHYA3lK21EY2OErjs86HD9UOBGMItCEw_liaMKeigsctNOBeFV9HVAII6sr0cN7e2_qJnH4K38JseFKdOnGUHiEtL8fx_CN9LV68Z1EAYlQyA7mKkUsH2yF9Sq58WsnDK1ZtLSZXeFYQt5iLqJc4eUAKeXHpiDrjvqSgbU9oZZJsOnMAb46_9gbwJJBjcioKQvBgLawpusRBoYfUs9rtNjLXf_eERgDupkos6NRhIwMmzhN2xItp9945FDHC6qf3plMpDXU1zZhit7PAXdijd0WXBt6SNm25d-NgsIw6GVf21WkLe3eTaxvzpzBsd26JqnBGQLZhk1eEEoh9HcgarRX3RJxkm_dQaJyuVGHBI0fz2rE27_kaMYu5u_ZYLbJpKew8wjfHMJqNiN4bFJihke9EyGvK32wFQnA_pxoq2NJiGJr80xtJO78yz5vWaDeeK5-v7WVkroNQ10V7K4E2Nq5sSYn_AqSxPvGpwM18l5cLd9Ql8SsktjxklGzE-_YxlGoPYsgvKLFS1aLYrtbtGXijTcWTdImnC810sN9DxUh1HIT2qZiMrEI2NlJc8QKpDvRy9Rd_Rdw36cbyG7QB-6VnzCO2JE7lTfqhdTxEYSbwdL6lvFz3X-57uKFJdDvdWAI5OYl5SlvDy_iwPuD1ANd31RD_NNy0
' URL: http://www.plantuml.com/plantuml/uml/dLN1Rjim3BtxAtIq5nleEHYA3lK21EY2OErjs86HD9UOBGMItCEw_liaMKeigsctNOBeFV9HVAII6sr0cN7e2_qJnH4K38JseFKdOnGUHiEtL8fx_CN9LV68Z1EAYlQyA7mKkUsH2yF9Sq58WsnDK1ZtLSZXeFYQt5iLqJc4eUAKeXHpiDrjvqSgbU9oZZJsOnMAb46_9gbwJJBjcioKQvBgLawpusRBoYfUs9rtNjLXf_eERgDupkos6NRhIwMmzhN2xItp9945FDHC6qf3plMpDXU1zZhit7PAXdijd0WXBt6SNm25d-NgsIw6GVf21WkLe3eTaxvzpzBsd26JqnBGQLZhk1eEEoh9HcgarRX3RJxkm_dQaJyuVGHBI0fz2rE27_kaMYu5u_ZYLbJpKew8wjfHMJqNiN4bFJihke9EyGvK32wFQnA_pxoq2NJiGJr80xtJO78yz5vWaDeeK5-v7WVkroNQ10V7K4E2Nq5sSYn_AqSxPvGpwM18l5cLd9Ql8SsktjxklGzE-_YxlGoPYsgvKLFS1aLYrtbtGXijTcWTdImnC810sN9DxUh1HIT2qZiMrEI2NlJc8QKpDvRy9Rd_Rdw36cbyG7QB-6VnzCO2JE7lTfqhdTxEYSbwdL6lvFz3X-57uKFJdDvdWAI5OYl5SlvDy_iwPuD1ANd31RD_NNy0
' Generated on: 2025-11-26T19:16:15.266379700

@startuml
skinparam classAttributeIconSize 0
hide circle

class Cliente {
  -id: int
  -nombre: String
  -direccion: String
  -DNI: String
  -correo: String
  --
  +Cliente(id: int, nombre: String, direccion: String, DNI: String, correo: String)
}

class Main {
  +{static} main(args: String[]): void
}

class Pedido {
  -cliente: Cliente
  -productos: List<Producto>
  -fecha: LocalDate
  --
  +Pedido(cliente: Cliente)
  +agregarProducto(p: Producto): void
  +calcularTotal(): double
  +mostrarResumen(): void
}

abstract class Producto {
  -nombre: String
  -precio: double
  --
  +Producto()
  +Producto(nombre: String, precio: double)
  +calcularPrecioFinal(): double
}

class ProductoDigital {
  -tamanioDescarga: double
  --
  +ProductoDigital(nombre: String, precio: double, tamanioDescarga: double)
  +calcularPrecioFinal(): double
}

class ProductoFisico {
  -costeEnvio: double
  --
  +ProductoFisico(nombre: String, precio: double, costeEnvio: double)
  +calcularPrecioFinal(): double
}

Pedido *-- Cliente
Pedido o-- Producto
ProductoDigital --|> Producto
ProductoFisico --|> Producto
@enduml